welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:21: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	(getDirection()==Direction.EST,estFaceMur) match {
        ^